# objective-c-mangler

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Readme.md  _clang-format  main.cpp
tests/: test.m
